@@ -7,6 +7,7 @@
         - Added advice in Readme regarding scripts in
           Windows Powershell (lerepp).
         - Establish CSP plugin.
+        - Introduce X-Frame-Options header.
 
 0.40 2020-12-17
         - Modernize ES and fix in-loops.
